--- a/index.html
+++ b/index.html
@@ -137,23 +137,18 @@
 	</div> -->
 
     <!-- changed encoding to UTF-8 -->
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 910px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 920px; left: 0px; right: 0px;">
       <span class="footer">
       <em><!--Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>-->
-          Copyright &copy; 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
+          Copyright &copy; 2017&nbsp;&nbsp; Donald G Gray</em><br><br>&nbsp;
       </span>
 
-    <div align="left">
+   <!-- <div align="left">
     <span class="caption"><em>Blog</em></span>
     <span class="text">
     <p>
     </p>
-   <!-- <p>
-    If you are using Windows 10 Creators Update or later you can run <b>Audovia</b> with this
-    <a class="nounderline"
-    href="http://www.pcworld.com/article/3055403/windows/windows-10s-bash-shell-can-run-graphical-linux-applications-with-this-trick.html"
-    target="_blank" rel="noopener noreferrer">trick</a>.
-    </p> -->
+
     <p>
     Do you play the Great Highland Bagpipe?&nbsp; If so, please visit
     <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.
@@ -162,15 +157,12 @@
     There is a Song Builder community at
     <a class="nounderline" href="https://plus.google.com/communities/115182680696167827789" target="_blank" rel="noopener noreferrer">Google+</a>.
     </p>
-   <!-- <p>
-    The JFugue MusicString notation is described in this
-    <a class="nounderline" href="http://www.jfugue.org/4/jfugue-chapter2.pdf" target="_blank" rel="noopener noreferrer">guide</a>.
-    </p> -->
+
     <p>
     &nbsp;
     </p>
     </span>
-    </div>
+    </div> -->
 
     <!-- <div align="left">
     <span class="caption"><em>Open Discussion</em></span>
