--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <title>Song Builder</title>
+    <title>Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
     <meta content="music making software for the Ubuntu operating system" name="description">
     <meta property="og:image" content="http://audovia.com/image/Songs_2.png">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Song Builder">
+    <meta property="og:title" content="Audovia">
     <meta property="og:description" content="music making software for the Ubuntu operating system">
     <style type="text/css">
       body {background-color: #ffffff;}
@@ -30,14 +30,17 @@
   </head>
   <body>
 
-    <h1><strong>Song Builder</strong></h1>
+    <h1><strong>Audovia</strong></h1>
     <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
     <h2><em>music making software for the Ubuntu operating system</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
-              <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
+             <!-- <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
                 alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
-                style="border: 0px solid;"></a>
+                style="border: 0px solid;"></a> -->
+                <img title="Audovia Icon"
+				                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
+                style="border: 0px solid;">
     </div>
 
     <!--<div style="position: absolute; left: 50%; margin-left: -494px; top: 154px;">-->
