--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
-    <meta content="music making software for the Ubuntu operating system" name="description">
+    <meta content="music making app for Linux" name="description">
     <meta property="og:image" content="http://audovia.com/image/Songs_2.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="music making software for the Ubuntu operating system">
+    <meta property="og:description" content="music making app for Linux">
     <style type="text/css">
       body {background-color: #ffffff;}
       h1 {color: #551A8B; font-family: Trebuchet MS; font-size: 40px; font-weight: normal; text-align: center;}
@@ -32,7 +32,7 @@
 
     <h1><strong>Audovia</strong></h1>
     <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
-    <h2><em>music making software for the Ubuntu operating system</em></h2>
+    <h2><em>music making app for Linux</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
              <!-- <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
