--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 468px; padding: 10px;">
 
-      <span class="text-black"><em><p style="margin-bottom: 16px;">To install Audovia 3.4 on <a class="nounderline" href="https://www.ubuntu.com/" target="_blank" rel="noopener noreferrer">Ubuntu</a> (64-bit only):</p></em></span>
+      <span class="text-black"><em><p style="margin-bottom: 16px;">To install Audovia on a <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
       <span class="text-black"><em><p style="margin-bottom: 16px;">Desktop shortcut:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/Audovia</p></span>
@@ -68,7 +68,7 @@
 
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 666px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 660px;">
     <a href="image/SongsFS.png" rel="noopener noreferrer">
       <img title="Songs"
 	                  alt="Songs" src="image/Songs.png"
