--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 660px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 670px;">
     <a href="image/SongsFS.png" rel="noopener noreferrer">
       <img title="Songs"
 	                  alt="Songs" src="image/Songs.png"
@@ -83,7 +83,7 @@
 	  from any other soundbank of your choice.
 	  </p>
 	  <p>
-	  <b>Audovia</b> is great for background music for videos or for backing tracks for playing or singing along to.&nbsp; Even ringtones for your mobile phone.
+	  <b>Audovia</b> is great for making background music for videos or backing tracks for playing or singing along to.&nbsp; Even ringtones for your mobile phone.
 	  </p>
 	  <p>
 	  Songs can be developed, tested and edited very quickly and easily by virtue of the database structure and the JFugue MusicString notation.
