--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title lang="en-gb">Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
-    <meta content="music making app for Linux" name="description">
+    <meta content="free stuff for making music on Linux" name="description">
     <meta property="og:image" content="http://audovia.com/image/Songs_2.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="music making app for Linux">
+    <meta property="og:description" content="free stuff for making music on Linux">
     <style type="text/css">
       body {background-color: #ffffff;}
       h1 {color: #551A8B; font-family: Trebuchet MS; font-size: 40px; font-weight: normal; text-align: center;}
@@ -25,14 +25,14 @@
       span.text {color: #555555; font-family: Verdana; font-size: 15px; line-height: 1.3;}
       span.caption {color: #551A8B;  font-family: Verdana; font-size: 16px;}
       li:not(:last-child) {margin-bottom: 8px;}
-      p {margin-top: 0px; margin-bottom: 16px;}
+      p {margin-top: 0px; margin-bottom: 12px;}
     </style>
   </head>
   <body>
 
     <h1><strong>Audovia</strong></h1>
     <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
-    <h2><em>music making app for Linux</em></h2>
+    <h2><em>free stuff for making music on Linux</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
              <!-- <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
@@ -68,7 +68,7 @@
 
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 670px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 664px;">
     <a href="image/SongsFS.png" rel="noopener noreferrer">
       <img title="Songs"
 	                  alt="Songs" src="image/Songs.png"
@@ -79,7 +79,7 @@
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 150px; left: 50%;  border: 8px solid white;">
       <span class="text">
 	  <p>
-	  These songs were produced using <b>Audovia</b> which makes music with up to fifteen instrumental voices and a percussion track.&nbsp; Instruments are chosen from the default soundbank of 128&nbsp;instruments or
+	  These songs were produced using <b>Audovia</b> which makes music with up to fifteen instrumental voices and a percussion track.&nbsp; Instruments can be chosen from the default soundbank of 128&nbsp;instruments or
 	  from any other soundbank of your choice.
 	  </p>
 	  <p>
@@ -93,14 +93,18 @@
 	        Durations are expressed as numerical values or by character codes.
 	  </p>
 	  <p>
-	        Songs can be exported to MIDI, MusicXML and WAV.
+	        Songs can be exported to MIDI and MusicXML.
 	  </p>
 	  <p>
-	        The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a>
-	        and exported to MP3.
+	        The MIDI files can be opened in <a class="nounderline" href="https://lmms.io/" target="_blank" rel="noopener noreferrer">LMMS</a>
+	        and exported to WAV.<br>
+	        WAV files can be opened in <a class="nounderline" href="http://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a>
+	        and exported to MP3.<br>
+	        The MusicXML files can be opened in <a class="nounderline" href="https://musescore.org/" target="_blank" rel="noopener noreferrer">MuseScore</a>
+	        for music publishing.
 	  </p>
 	  <p>
-	        <em>Features:</em>
+	        <em>Additional Features:</em>
 	        <ul>
 	          <li>Song backup and restore via XML;</li>
 	          <li>JFugue extension for string constants;</li>
@@ -115,7 +119,7 @@
 	          <li style="font-weight: bold;"><span style="font-weight: normal;">Tree View/select "Song", press Play, then Default Soundbank.</span></li>
 	        </ol>
 	  </p>
-	  <p><br>
+	  <p>
 	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.&nbsp; One good soundbank is available <a class="nounderline" href="https://drive.google.com/folderview?id=0B8XyJFPN233fbmY3WFhMT3djc1E&usp=sharing"
       target="_blank" rel="noopener noreferrer">here</a> and there are more at <a class="nounderline" href="https://sites.google.com/site/soundfonts4u/"
       target="_blank" rel="noopener noreferrer">Soundfonts4U</a>.
