update piobaireachd playlist

--- a/piobaireachd_practice.html
+++ b/piobaireachd_practice.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <title>Piobaireachd Practice</title>
+    <title lang="en-gb">Piobaireachd Practice</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
     <meta content="Audio playlist where the song titles change colour when they are played or paused." name="description">
