--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
-    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 500px; padding: 10px;">
+    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 510px; padding: 10px;">
 
       <span class="text-black"><em><p style="margin-bottom: 10px;">To install Audovia on a <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 10px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
       <span class="text-black"><em><p style="margin-bottom: 10px;">Desktop shortcut:</p></em></span>
-      <span class="terminal"><p style="margin-bottom: 8px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/Audovia</p></span>
+      <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/Audovia</p></span>
+
+      <span class="text"><p style="margin-bottom: 4px;">For other systems such as Windows, you can use Oracle's <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a> technology to run a suitable operating system such as Ubuntu (64-bit) in a virtual machine.</p></span>
       <!--<hr><span class="text"><p style="margin-bottom: 8px; margin-top: 12px;">On Microsoft Windows, first install
       <a class="nounderline" href="http://java.com/" target="_blank" rel="noopener noreferrer">Java</a>,
       then download Audovia from <a class="nounderline" href="https://bintray.com/songbuilder/generic/download_file?file_path=installAudovia-3-3.msi" rel="noopener noreferrer">here</a>.
@@ -68,7 +70,7 @@
 
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 664px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 770px;">
     <a href="image/SongsFS.png" rel="noopener noreferrer">
       <img title="Songs"
 	                  alt="Songs" src="image/Songs.png"
@@ -93,9 +95,15 @@
 	        Durations are expressed as numerical values or by character codes.
 	  </p>
 	  <p>
-	        Songs can be exported to MIDI and MusicXML.
+	        You can use notes from C0 to G10, corresponding to MIDI values 0 to 127.&nbsp Middle C is C5.&nbsp The opening phrase of Joy to the World can be written as:
 	  </p>
 	  <p>
+	        &nbsp;&nbsp;&nbsp;&nbsp; C6q&nbsp; B5i.&nbsp; A5s&nbsp; G5q.&nbsp; F5i&nbsp; E5q&nbsp; D5q&nbsp; C5q.
+	  </p>
+	  <p>
+	        Songs can be exported to MIDI and MusicXML.
+	  </p>
+	  <p style="margin-bottom: 18px;">
 	        The MIDI files can be opened in <a class="nounderline" href="https://lmms.io/" target="_blank" rel="noopener noreferrer">LMMS</a>
 	        and exported to WAV.<br>
 	        WAV files can be opened in <a class="nounderline" href="http://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a>
@@ -104,7 +112,7 @@
 	        for music publishing.
 	  </p>
 	  <p>
-	        <em>Additional Features:</em>
+	        <span class="text-black"><em>Additional Features:</em></span>
 	        <ul>
 	          <li>Song backup and restore via XML;</li>
 	          <li>JFugue extension for string constants;</li>
@@ -113,7 +121,7 @@
 	        </ul>
 	  </p>
 	  <p>
-	        <em>Quick start:</em>
+	        <span class="text-black"><em>Quick start:</em></span>
 	        <ol>
 	          <li style="font-weight: bold;"><span style="font-weight: normal;">File/XML Import/open Demo folder, select a song and import;</span></li>
 	          <li style="font-weight: bold;"><span style="font-weight: normal;">Tree View/select "Song", press Play, then Default Soundbank.</span></li>
@@ -144,7 +152,7 @@
 	</div> -->
 
     <!-- changed encoding to UTF-8 -->
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 920px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1010px; left: 0px; right: 0px;">
       <span class="footer">
       <em><!--Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>-->
           Copyright &copy; 2017&nbsp;&nbsp; Donald G Gray</em><br><br>&nbsp;
