--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <title lang="en-gb">Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
+
+    <link rel="stylesheet"
+	      href="https://fonts.googleapis.com/css?family=Open Sans">
+
     <meta content="Donald G Gray" name="author">
     <meta content="Music making application for Linux" name="description">
     <meta property="og:image" content="http://audovia.com/image/Songs_2.png">
@@ -12,18 +16,18 @@
     <meta property="og:description" content="Music making application for Linux">
     <style type="text/css">
       body {background-color: #ffffff;}
-      h1 {color: #551A8B; font-family: Trebuchet MS; font-size: 40px; font-weight: normal; text-align: center;}
-      h2 {color: #551A8B; font-family: Verdana; font-size: 14px; line-height: 0.0; font-weight: normal; text-align: center;}
+      h1 {color: #551A8B; font-family: Open Sans; font-size: 40px; font-weight: normal; text-align: center;}
+      h2 {color: #551A8B; font-family: Open Sans; font-size: 14px; font-weight: normal; text-align: center;}
       hr {color: #ffffff;}
       a:link {color: #551A8B;}
       a:visited {color: #551A8B;}
       a:active {color: #EE0000;}
       a.nounderline {text-decoration:none; font-weight:bold;}
-      span.terminal {color: #555555; font-family: Verdana;}
-      span.footer {color: #555555; font-family: Verdana; font-size: 14px; line-height: 1.3;}
-      span.text-black {color: #000000; font-family: Verdana; font-size: 15px; line-height: 1.3;}
-      span.text {color: #555555; font-family: Verdana; font-size: 15px; line-height: 1.3;}
-      span.caption {color: #551A8B;  font-family: Verdana; font-size: 16px;}
+      span.terminal {color: #555555; font-family: Open Sans;}
+      span.footer {color: #555555; font-family: Open Sans; font-size: 14px; line-height: 1.3;}
+      span.text-black {color: #000000; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
+      span.text {color: #555555; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
+      span.caption {color: #551A8B;  font-family: Open Sans; font-size: 16px;}
       li:not(:last-child) {margin-bottom: 8px;}
       p {margin-top: 0px; margin-bottom: 12px;}
     </style>
@@ -32,7 +36,9 @@
 
     <h1><strong>Audovia</strong></h1>
     <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
+    <div style="position: relative; top: -16px;">
     <h2><em>Music making application for Linux</em></h2>
+    </div>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
              <!-- <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
@@ -55,7 +61,7 @@
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
-    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 510px; padding: 10px;">
+    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 500px; padding: 10px;">
 
       <span class="text-black"><em><p style="margin-bottom: 10px;">To install Audovia on a <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 10px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
@@ -70,7 +76,7 @@
 
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 770px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 760px;">
     <a href="image/SongsFS.png" rel="noopener noreferrer">
       <img title="Songs"
 	                  alt="Songs" src="image/Songs.png"
@@ -103,7 +109,7 @@
 	  <p>
 	        Songs can be exported to MIDI and MusicXML.
 	  </p>
-	  <p style="margin-bottom: 18px;">
+	  <p style="margin-bottom: 30px;">
 	        The MIDI files can be opened in <a class="nounderline" href="https://lmms.io/" target="_blank" rel="noopener noreferrer">LMMS</a>
 	        and exported to WAV.<br>
 	        WAV files can be opened in <a class="nounderline" href="http://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a>
@@ -113,7 +119,7 @@
 	  </p>
 	  <p>
 	        <span class="text-black"><em>Additional Features:</em></span>
-	        <ul>
+	        <ul style="margin-bottom: 24px;">
 	          <li>Song backup and restore via XML;</li>
 	          <li>JFugue extension for string constants;</li>
 	          <li>Shared database support for MySQL;</li>
