--- a/playlist.html
+++ b/playlist.html
@@ -4,6 +4,10 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <title>Playlist</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
+
+    <link rel="stylesheet"
+	      href="https://fonts.googleapis.com/css?family=Open Sans">
+
     <meta content="Donald G Gray" name="author">
     <meta content="Audio playlist where the song titles change colour when they are played or paused." name="description">
     <meta property="og:image" content="http://audovia.com/image/Kelpies1280.jpg">
@@ -11,8 +15,8 @@
     <meta property="og:title" content="Playlist">
     <meta property="og:description" content="Audio playlist where the song titles change colour when they are played or paused.">
     <style type="text/css">
-      span.composer {color: #817F73; font-family: Verdana; font-size: 16px;}
-      span.song {color: #551A8B; cursor: pointer; font-family: Verdana; font-size: 16px;}
+      span.composer {color: #817F73; font-family: Open Sans; font-size: 16px; line-height: 1.3;}
+      span.song {color: #551A8B; cursor: pointer; font-family: Open Sans; font-size: 16px; line-height: 1.3;}
     </style>
   </head>
 
