--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet"
 	      href="https://fonts.googleapis.com/css?family=Open Sans">
 
+    <link rel="stylesheet"
+	      href="https://fonts.googleapis.com/css?family=Ubuntu">
+
     <meta content="Donald G Gray" name="author">
     <meta content="Music making application for Linux" name="description">
     <meta property="og:image" content="http://audovia.com/image/Songs_2.png">
@@ -16,8 +19,8 @@
     <meta property="og:description" content="Music making application for Linux">
     <style type="text/css">
       body {background-color: #ffffff;}
-      h1 {color: #551A8B; font-family: Open Sans; font-size: 40px; font-weight: normal; text-align: center;}
-      h2 {color: #551A8B; font-family: Open Sans; font-size: 14px; font-weight: normal; text-align: center;}
+      h1 {color: #551A8B; font-family: Ubuntu; font-size: 40px; font-weight: normal; text-align: center;}
+      h2 {color: #551A8B; font-family: Ubuntu; font-size: 18px; font-weight: normal; text-align: center;}
       hr {color: #ffffff;}
       a:link {color: #551A8B;}
       a:visited {color: #551A8B;}
@@ -36,7 +39,7 @@
 
     <h1><strong>Audovia</strong></h1>
     <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
-    <div style="position: relative; top: -16px;">
+    <div style="position: relative; top: -14px;">
     <h2><em>Music making application for Linux</em></h2>
     </div>
 
