--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	      href="https://fonts.googleapis.com/css?family=Ubuntu">
 
     <meta content="Donald G Gray" name="author">
-    <meta content="Music making application for Linux" name="description">
+    <meta content="Song Builder for Linux" name="description">
     <meta property="og:image" content="http://audovia.com/image/Songs_2.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="Music making application for Linux">
+    <meta property="og:description" content="Song Builder for Linux">
     <style type="text/css">
       body {background-color: #ffffff;}
       h1 {color: #551A8B; font-family: Ubuntu; font-size: 40px; font-weight: normal; text-align: center;}
@@ -40,7 +40,7 @@
     <h1><strong>Audovia</strong></h1>
     <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
     <div style="position: relative; top: -14px;">
-    <h2><em>Music making application for Linux</em></h2>
+    <h2><em>Song Builder for Linux</em></h2>
     </div>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
@@ -52,7 +52,10 @@
                 style="border: 0px solid;">
     </div>
 
-    <!--<div style="position: absolute; left: 50%; margin-left: -494px; top: 154px;">-->
+    <!-- Place this code where you want the badge to render. -->
+	<!--<a href="https://plus.google.com/communities/115182680696167827789?prsrc=3" rel="publisher" target="_blank" style="text-decoration:none;">
+	<img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/>
+    </a>-->
 
     <div style="position: absolute; left: 50%; margin-left: -494px; top: 154px;">
 
