--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
       p {margin-top: 0px; margin-bottom: 12px;}
     </style>
   </head>
-  <body>
+  <body style="margin: 0;">
 
-    <h1><strong>Audovia</strong></h1>
+<!--<div style="position: absolute; top: 0px; width: 100%; height: 140px; background: linear-gradient(#8000ff,#ffffff);">-->
+<div style="position: absolute; top: 0px; width: 100%; height: 140px; background: linear-gradient(#8000ff,#ffffff);">
+
+   <h1><strong>Audovia</strong></h1>
     <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
     <div style="position: relative; top: -14px;">
     <h2><em>Song Builder for Linux</em></h2>
@@ -51,6 +54,8 @@
 				                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
                 style="border: 0px solid;">
     </div>
+
+ </div>
 
     <!-- Place this code where you want the badge to render. -->
 	<!--<a href="https://plus.google.com/communities/115182680696167827789?prsrc=3" rel="publisher" target="_blank" style="text-decoration:none;">
