--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta content="Donald G Gray" name="author">
     <meta content="Song Builder for Linux" name="description">
-    <meta property="og:image" content="http://audovia.com/image/Songs_2.png">
+    <meta property="og:image" content="http://audovia.com/image/screenshot.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
     <meta property="og:description" content="Song Builder for Linux">
