--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet"
 	      href="https://fonts.googleapis.com/css?family=Ubuntu">
 
+    <link rel="stylesheet"
+	      href="https://fonts.googleapis.com/css?family=Cutive Mono">
+
     <meta content="Donald G Gray" name="author">
     <meta content="Music Production for Linux" name="description">
     <meta property="og:image" content="http://audovia.com/image/screenshot.png">
@@ -26,7 +29,7 @@
       a:visited {color: #551A8B;}
       a:active {color: #EE0000;}
       a.nounderline {text-decoration:none; font-weight:bold;}
-      span.terminal {color: #555555; font-family: Open Sans;}
+      span.terminal {color: #555555; font-family: Cutive Mono; font-size: 15px;}
       span.footer {color: #555555; font-family: Open Sans; font-size: 14px; line-height: 1.3;}
       span.text-black {color: #000000; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
       span.text {color: #555555; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
@@ -74,10 +77,10 @@
 
     <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 500px; padding: 10px;">
 
-      <span class="text-black"><em><p style="margin-bottom: 10px;">To install Audovia on a <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></em></span>
-      <span class="terminal"><p style="margin-bottom: 10px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
-      <span class="text-black"><em><p style="margin-bottom: 10px;">Desktop shortcut:</p></em></span>
-      <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/Audovia</p></span>
+      <span class="text"><p style="margin-bottom: 10px;">To install Audovia on a Linux <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></span>
+      <span class="text"><p style="margin-bottom: 10px;">&nbsp;&nbsp;&nbsp;&nbsp; sudo snap install audovia</p></span>
+      <span class="text"><p style="margin-bottom: 10px;">Desktop shortcut:</p></span>
+      <span class="text"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp; /snap/audovia/current/Audovia</p></span>
 
       <span class="text"><p style="margin-bottom: 4px;">For Microsoft Windows or Apple Macintosh, you can use Oracle's <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a> to run a suitable operating system such as Ubuntu (64&#8209;bit) in a virtual machine.</p></span>
       <!--<hr><span class="text"><p style="margin-bottom: 8px; margin-top: 12px;">On Microsoft Windows, first install
@@ -98,7 +101,7 @@
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 150px; left: 50%;  border: 8px solid white;">
       <span class="text">
 	  <p>
-	  These songs were produced using <b>Audovia</b> which makes music with up to fifteen instrumental voices and a percussion track.&nbsp; Instruments can be chosen from the default soundbank of 128&nbsp;instruments or
+	  These songs were produced using <b>Audovia</b>, a Linux application which can make music with up to fifteen instrumental voices and a percussion track.</p><p>Instruments can be chosen from the default soundbank of 128&nbsp;instruments or
 	  from any other soundbank of your choice.
 	  </p>
 	  <p>
