--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
-    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 500px; padding: 10px;">
+    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 517px; padding: 10px;">
 
-      <span class="text"><p style="margin-bottom: 10px;">To install Audovia on a Linux <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></span>
+      <span class="text"><p style="margin-bottom: 10px;">To install <b>Audovia</b> on a Linux <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></span>
       <span class="text"><p style="margin-bottom: 10px;">&nbsp;&nbsp;&nbsp;&nbsp; sudo snap install audovia</p></span>
       <span class="text"><p style="margin-bottom: 10px;">Desktop shortcut:</p></span>
       <span class="text"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp; /snap/audovia/current/Audovia</p></span>
@@ -90,7 +90,7 @@
 
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 760px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 768px;">
     <a href="image/SongsFS.png" rel="noopener noreferrer">
       <img title="Songs"
 	                  alt="Songs" src="image/Songs.png"
@@ -172,7 +172,7 @@
 	</div> -->
 
     <!-- changed encoding to UTF-8 -->
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1010px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1024px; left: 0px; right: 0px;">
       <span class="footer">
       <em><!--Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>-->
           Copyright &copy; 2017&nbsp;&nbsp; Donald G Gray</em><br><br>&nbsp;
