--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
       <a class="nounderline" href="http://java.com/" target="_blank" rel="noopener noreferrer">Java</a>,
       then download Audovia from <a class="nounderline" href="https://bintray.com/songbuilder/generic/download_file?file_path=installAudovia-3-3.msi" rel="noopener noreferrer">here</a>.
       </span>-->
-
+      <!--
+      <span class="text"><p style="margin-bottom: 4px;"><b>Audovia</b> is an open source application and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></span>
+      -->
     </div>
 
     <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 774px;">
@@ -170,6 +172,9 @@
 
     <!-- changed encoding to UTF-8 -->
     <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1030px; left: 0px; right: 0px;">
+
+    <span class="footer"><em><p style="margin-bottom: 6px;"><b>Audovia</b> is an open source application and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></em></span>
+
       <span class="footer">
       <em><!--Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>-->
           Copyright &copy; 2017&nbsp;&nbsp; Donald G Gray</em><br><br>&nbsp;
