--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <!-- changed encoding to UTF-8 -->
     <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1030px; left: 0px; right: 0px;">
 
-    <span class="footer"><em><p style="margin-bottom: 6px;"><b>Audovia</b> is an open source application and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></em></span>
+    <span class="footer"><em><p style="margin-bottom: 6px;"><b>Audovia</b> is open-source software and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></em></span>
 
       <span class="footer">
       <em><!--Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>-->
