--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
-    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 523px; padding: 10px;">
+    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 514px; padding: 10px;">
 
       <span class="text"><p style="margin-bottom: 10px;">To install <b>Audovia</b> on a Linux <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></span>
       <span class="text"><p style="margin-bottom: 10px;">&nbsp;&nbsp;&nbsp;&nbsp; sudo snap install audovia</p></span>
@@ -89,7 +89,7 @@
       -->
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 774px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 756px;">
     <a href="image/SongsFS.png" rel="noopener noreferrer">
       <img title="Songs"
 	                  alt="Songs" src="image/Songs.png"
@@ -120,14 +120,14 @@
 	        &nbsp;&nbsp;&nbsp;&nbsp; C6q&nbsp; B5i.&nbsp; A5s&nbsp; G5q.&nbsp; F5i&nbsp; E5q&nbsp; D5q&nbsp; C5q.
 	  </p>
 	  <p>
-	        Songs can be exported to MIDI and MusicXML.
+	        Songs can be exported to MIDI, MusicXML and WAV.
 	  </p>
 	  <p style="margin-bottom: 30px;">
-	        The MIDI files can be opened in <a class="nounderline" href="https://lmms.io/" target="_blank" rel="noopener noreferrer">LMMS</a>
-	        and exported to WAV.<br>
-	        WAV files can be opened in <a class="nounderline" href="http://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a>
-	        and exported to MP3.<br>
-	        The MusicXML files can be opened in <a class="nounderline" href="https://musescore.org/" target="_blank" rel="noopener noreferrer">MuseScore</a>
+	        <!--The MIDI files can be opened in <a class="nounderline" href="https://lmms.io/" target="_blank" rel="noopener noreferrer">LMMS</a>
+	        and exported to WAV.<br>-->
+	        The WAV files can be opened in <a class="nounderline" href="http://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a>
+	        and exported to MP3 and
+	        the MusicXML files can be opened in <a class="nounderline" href="https://musescore.org/" target="_blank" rel="noopener noreferrer">MuseScore</a>
 	        for music publishing.
 	  </p>
 	  <p>
@@ -171,7 +171,7 @@
 	</div> -->
 
     <!-- changed encoding to UTF-8 -->
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1030px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1010px; left: 0px; right: 0px;">
 
     <span class="footer"><em><p style="margin-bottom: 6px;"><b>Audovia</b> is open-source software and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></em></span>
 
