--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
 	          <li>Song backup and restore via XML;</li>
 	          <li>JFugue extension for string constants;</li>
 	          <li>Shared database support for MySQL;</li>
-	          <li>Comprehensive <a class="nounderline" href="doc/AudoviaDocumentation-3-5.pdf" target="_blank" rel="noopener noreferrer">Documentation</a>.</li>
+	          <li>Comprehensive <a class="nounderline" href="doc/AudoviaDocumentation-3-6.pdf" target="_blank" rel="noopener noreferrer">Documentation</a>.</li>
 	        </ul>
 	  </p>
 	  <p>
 	        <span class="text-black"><em>Quick start:</em></span>
 	        <ol>
-	          <li style="font-weight: bold;"><span style="font-weight: normal;">File/XML Import/open Demo folder, select a song and import;</span></li>
+	          <li style="font-weight: bold;"><span style="font-weight: normal;">File/Song Import/open Demo folder, select a song and import;</span></li>
 	          <li style="font-weight: bold;"><span style="font-weight: normal;">Tree View/select "Song", press Play, then Default Soundbank.</span></li>
 	        </ol>
 	  </p>
