--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body style="margin: 0;">
 
 <!--<div style="position: absolute; top: 0px; width: 100%; height: 140px; background: linear-gradient(#8000ff,#ffffff);">-->
-<div style="position: absolute; top: 0px; width: 100%; height: 140px; background: linear-gradient(#8000ff,#ffffff);">
+<div style="position: absolute; top: 0px; width: 100%; height: 140px;"> <!-- background: linear-gradient(#8000ff,#ffffff);">-->
 
    <h1><strong>Audovia</strong></h1>
     <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
