--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       <span class="text"><p style="margin-bottom: 10px;">Desktop shortcut:</p></span>
       <span class="text"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp; /snap/audovia/current/Audovia</p></span>
 
-      <span class="text"><p style="margin-bottom: 4px;">For Microsoft Windows or Apple Macintosh, you can use Oracle's <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a> to run a suitable Linux system such as Ubuntu (64&#8209;bit) in a virtual machine.</p></span>
+      <span class="text"><p style="margin-bottom: 4px;">For Microsoft Windows or Apple Macintosh, you can use Oracle's <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a> to run a suitable Linux system
+      such as <a class="nounderline" href="https://www.ubuntu.com/desktop" target="_blank" rel="noopener noreferrer">Ubuntu</a> (64&#8209;bit) in a virtual machine.</p></span>
       <!--<hr><span class="text"><p style="margin-bottom: 8px; margin-top: 12px;">On Microsoft Windows, first install
       <a class="nounderline" href="http://java.com/" target="_blank" rel="noopener noreferrer">Java</a>,
       then download Audovia from <a class="nounderline" href="https://bintray.com/songbuilder/generic/download_file?file_path=installAudovia-3-3.msi" rel="noopener noreferrer">here</a>.
