--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
-    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 514px; padding: 10px;">
+    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 504px; padding: 10px;">
 
-      <span class="text"><p style="margin-bottom: 10px;">To install <b>Audovia</b> on a Linux <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></span>
-      <span class="text"><p style="margin-bottom: 10px;">&nbsp;&nbsp;&nbsp;&nbsp; sudo snap install audovia</p></span>
-      <span class="text"><p style="margin-bottom: 10px;">Desktop shortcut:</p></span>
-      <span class="text"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp; /snap/audovia/current/Audovia</p></span>
+      <span class="text"><p>To install <b>Audovia</b> on a Linux <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></span>
+      <span class="text"><p>&nbsp;&nbsp;&nbsp;&nbsp; sudo snap install audovia</p></span>
+      <span class="text"><p>Desktop shortcut:</p></span>
+      <span class="text"><p>&nbsp;&nbsp;&nbsp;&nbsp; /snap/audovia/current/Audovia</p></span>
 
-      <span class="text"><p style="margin-bottom: 4px;">For Microsoft Windows or Apple Macintosh, you can use Oracle's <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a> to run a suitable Linux system
+      <span class="text"><p>On Microsoft Windows or Apple Macintosh, you can use Oracle's <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a> to run a suitable Linux system
       such as <a class="nounderline" href="https://www.ubuntu.com/desktop" target="_blank" rel="noopener noreferrer">Ubuntu</a> (64&#8209;bit) in a virtual machine.</p></span>
       <!--<hr><span class="text"><p style="margin-bottom: 8px; margin-top: 12px;">On Microsoft Windows, first install
       <a class="nounderline" href="http://java.com/" target="_blank" rel="noopener noreferrer">Java</a>,
@@ -88,15 +88,37 @@
       <!--
       <span class="text"><p style="margin-bottom: 4px;"><b>Audovia</b> is an open source application and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></span>
       -->
+    <!--</div>
+
+
+    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 756px; padding: 10px;">-->
+
+      <span class="text"><p>The <b>Audovia Interface</b> directory can be used to share
+        MIDI, MusicXML and WAV output files with other snappy applications.
+        </p>
+        <p>
+        This directory can be synced by running the desktop shortcut:</p>
+
+      <p>&nbsp;&nbsp;&nbsp;&nbsp; /snap/audovia/current/Audosync</p>
+      <p>
+        We recommend copying this to:
+      </p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp; ~/.local/share/applications/
+      </p>
+      <p style="margin-bottom: 4px;">
+        This hidden directory can be accessed by pressing ctrl+H.
+      </p>
+      </span>
+
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 756px;">
+    <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 756px;">
     <a href="image/SongsFS.png" rel="noopener noreferrer">
       <img title="Songs"
 	                  alt="Songs" src="image/Songs.png"
                 style="border: 0px solid;" align="left">
     </a>
-    </div>
+    </div>-->
 
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 156px; left: 50%;  border: 8px solid white;">
       <span class="text">
@@ -124,10 +146,10 @@
 	        Songs can be exported to MIDI, MusicXML and WAV.
 	  </p>
 	  <p style="margin-bottom: 30px;">
-	        <!--The MIDI files can be opened in <a class="nounderline" href="https://lmms.io/" target="_blank" rel="noopener noreferrer">LMMS</a>
-	        and exported to WAV.<br>-->
-	        The WAV files can be opened in <a class="nounderline" href="http://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a>
-	        and exported to MP3 and
+	        The MIDI files can be opened in <a class="nounderline" href="https://lmms.io/" target="_blank" rel="noopener noreferrer">LMMS</a>
+	        for music processing.&nbsp;
+	        The WAV files can be opened in <a class="nounderline" href="http://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a>,
+	        then exported to MP3 and
 	        the MusicXML files can be opened in <a class="nounderline" href="https://musescore.org/" target="_blank" rel="noopener noreferrer">MuseScore</a>
 	        for music publishing.
 	  </p>
@@ -172,7 +194,7 @@
 	</div> -->
 
     <!-- changed encoding to UTF-8 -->
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1010px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1025px; left: 0px; right: 0px;">
 
     <!--<span class="footer"><em><p style="margin-bottom: 6px;"><b>Audovia</b> is open-source software and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></em></span>-->
 
