--- a/index.html
+++ b/index.html
@@ -57,12 +57,22 @@
 
  </div>
 
+    <div align="center" style="background: linear-gradient(to right, #8000ff, white, white, #8000ff); width: 972px; position: relative; left: 50%; margin-left: -486px; top: 140px;">
+    <span class="text"> <hr>
+    <a href="index.html" style="text-decoration:none;"><b>Home</b></a>&nbsp;&nbsp;&nbsp;
+    <a href="demo.html" style="text-decoration:none;">Demo</a>&nbsp;&nbsp;&nbsp;
+    <a href="tutorial.html" style="text-decoration:none;">Tutorial</a>&nbsp;&nbsp;&nbsp;
+    <a href="mailto:info@audovia.com" style="text-decoration:none;">Contact Us</a> <hr>
+    </span>
+    </div>
+
+
     <!-- Place this code where you want the badge to render. -->
 	<!--<a href="https://plus.google.com/communities/115182680696167827789?prsrc=3" rel="publisher" target="_blank" style="text-decoration:none;">
 	<img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/>
     </a>-->
 
-    <div style="position: absolute; left: 50%; margin-left: -494px; top: 160px;">
+    <div style="position: absolute; left: 50%; margin-left: -494px; top: 230px;">
 
       <iframe style="border-style: none;" src="playlist.html" height="330" width="420"></iframe>
 
@@ -72,7 +82,7 @@
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
-    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 504px; padding: 10px;">
+    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 574px; padding: 10px;">
 
       <span class="text"><p>To install <b>Audovia</b> on a Linux <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></span>
       <span class="text"><p>&nbsp;&nbsp;&nbsp;&nbsp; sudo snap install audovia</p></span>
@@ -120,7 +130,7 @@
     </a>
     </div>-->
 
-    <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 156px; left: 50%;  border: 8px solid white;">
+    <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 226px; left: 50%;  border: 8px solid white;">
       <span class="text">
 	  <p>
 	  These songs were produced using <b>Audovia</b>, a Linux application which can make music with up to fifteen instrumental voices and a percussion track.</p><p>Instruments can be chosen from the default soundbank of 128&nbsp;instruments or
@@ -194,7 +204,7 @@
 	</div> -->
 
     <!-- changed encoding to UTF-8 -->
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1025px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1095px; left: 0px; right: 0px;">
 
     <!--<span class="footer"><em><p style="margin-bottom: 6px;"><b>Audovia</b> is open-source software and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></em></span>-->
 
