--- a/demo.html
+++ b/demo.html
@@ -21,7 +21,6 @@
       body {background-color: #ffffff;}
       h1 {color: #551A8B; font-family: Ubuntu; font-size: 40px; font-weight: normal; text-align: center;}
       h2 {color: #551A8B; font-family: Ubuntu; font-size: 18px; font-weight: normal; text-align: center;}
-      hr {color: #ffffff;}
       a:link {color: #551A8B;}
       a:visited {color: #551A8B;}
       a:active {color: #EE0000;}
@@ -58,11 +57,11 @@
  </div>
 
     <div align="center" style="background: linear-gradient(to right, #8000ff, white, white, #8000ff); width: 972px; position: relative; left: 50%; margin-left: -486px; top: 140px;">
-    <span class="text"> <hr>
+    <span class="text"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
     <a href="index.html" style="text-decoration:none;">Home</a>&nbsp;&nbsp;&nbsp;
     <a href="demo.html" style="text-decoration:none;"><b>Demo</b></a>&nbsp;&nbsp;&nbsp;
     <a href="tutorial.html" style="text-decoration:none;">Tutorial</a>&nbsp;&nbsp;&nbsp;
-    <a href="mailto:info@audovia.com" style="text-decoration:none;">Contact Us</a> <hr>
+    <a href="mailto:info@audovia.com" style="text-decoration:none;">Contact Us</a> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
     </span>
     </div>
 
