--- a/tutorial.html
+++ b/tutorial.html
@@ -12,11 +12,11 @@
 	      href="https://fonts.googleapis.com/css?family=Ubuntu">
 
     <meta content="Donald G Gray" name="author">
-    <meta content="Linux application for making music using JFugue MusicStrings" name="description">
+    <meta content="Linux application for making music" name="description">
     <meta property="og:image" content="http://audovia.com/image/screenshot.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia - Tutorial">
-    <meta property="og:description" content="Linux application for making music using JFugue MusicStrings">
+    <meta property="og:description" content="Linux application for making music">
     <style type="text/css">
       body {background-color: #ffffff;}
       h1 {color: #551A8B; font-family: Ubuntu; font-size: 40px; font-weight: normal; text-align: center;}
@@ -42,7 +42,7 @@
    <h1><strong>Audovia</strong></h1>
     <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
     <div style="position: relative; top: -14px;">
-    <h2><em>Linux application for making music using JFugue MusicStrings</em></h2>
+    <h2><em>Linux application for making music</em></h2>
     </div>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
