--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <span class="text"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
     <a href="index.html" style="text-decoration:none;"><b>Home</b></a>&nbsp;&nbsp;&nbsp;
     <a href="demo.html" style="text-decoration:none;">Demo</a>&nbsp;&nbsp;&nbsp;
-    <a href="tutorial.html" style="text-decoration:none;">Tutorial</a>&nbsp;&nbsp;&nbsp;
-    <a href="mailto:info@audovia.com" style="text-decoration:none;">Contact Us</a> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
+    <a href="tutorial.html" style="text-decoration:none;">Tutorial</a><!--&nbsp;&nbsp;&nbsp;
+    <a href="mailto:info@audovia.com" style="text-decoration:none;">Contact Us</a>--> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
     </span>
     </div>
 
