--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
     <meta property="og:description" content="Linux application for making music">
+    <meta property="og:url" content="https://songbase.github.io/">
 
     <style type="text/css">
       body {background-color: #ffffff;}
