--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta content="Donald G Gray" name="author">
     <meta content="Linux application for making music" name="description">
     <meta property="og:image" content="http://audovia.com/image/screenshot.png">
+    <meta property="og:image:width" content="1280">
+    <meta property="og:image:height" content="760">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
     <meta property="og:description" content="Linux application for making music">
